Created a cron job that will run and update all reports, added an endpoint for nn server, updated the API docs
