# api_server/routes/swagger-ui-dist/swagger.json
@@ -16,9 +16,13 @@
     {
       "name": "Reports",
       "description": "All reports made"
+    },
+    {
+      "name": "Process",
+      "description": "Processing Routes"
     }
   ],
-  "host": "localhost:8080",
+  "host": "fakenewsdetector.tech",
   "basePath": "/API",
   "schemes": [
     "http"
@@ -851,6 +855,46 @@
           "500": {
             "description": "Server Error"
           }
+        }
+      }
+    }
+  },
+  "/Check": {
+    "post": {
+      "tags": [
+        "Process"
+      ],
+      "summary": "Checks the ",
+      "description": "Post request to add a new report to the database",
+      "operationId": "",
+      "consumes": [
+        "application/x-www-form-urlencoded"
+      ],
+      "produces": "application/json",
+      "parameters": [
+        {
+          "name": "type",
+          "in": "formData",
+          "description": "The type of report being made. 1 = Fact, 2 = Source",
+          "required": true,
+          "type": "integer"
+        },
+        {
+          "name": "description",
+          "in": "formData",
+          "description": "The body of the report",
+          "required": true,
+          "type": "string"
+        }
+      ],
+      "responses": {
+        "200": {
+          "schema": {
+            "$ref": "#/definitions/POST Reports"
+          }
+        },
+        "500": {
+          "description": "Server Error"
         }
       }
     }
@@ -1866,6 +1910,19 @@
               "example": "2020-07-20T23:01:08.926Z"
             }
           }
+        }
+      }
+    },
+    "POST Process": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string",
+          "example": "text"
+        },
+        "tycontentpe": {
+          "type": "string",
+          "example": "News alert:..."
         }
       }
     },
